<resources>
    <string name="app_name">CourierHelper</string>
    <string name="by_author_name">by Ivan Makachka © 2017–2018</string>
    <string name="about_ver_title">Версия</string>
    <string name="prefs_name" translatable="false">MyPrefsFile</string>
    <string name="add_new_delivery">Добавить доставку</string>
    <string name="edit_delivery">Изменить доставку</string>
    <string name="yandex_map_activity">Все доставки на карте</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="wallet_nav_item_title">Кошелёк</string>
    <string name="archive_nav_item_title">Архив</string>
    <string name="stats_nav_item_title">Статистика</string>
    <string name="about_nav_item_title">О приложении</string>
    <string name="settings_nav_item_title">Настройки</string>
    <string name="how_to_title">Как пользоваться</string>
    <string name="desc_overflow_button">Статус доставки</string>
    <string name="completed">Выполнил</string>
    <string name="change_date">Перенести</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="rate">Оценить</string>
    <string name="later">Позже</string>
    <string name="never">Никогда</string>
    <string name="are_you_sure_delete">Вы уверены, что хотите удлаить эту доставку?</string>
    <string name="pref_sms_category">SMS</string>
    <string name="pref_sms_to_single_everyone_title">Текст сообщения</string>
    <string name="pref_sms_to_single_summary">для отправки клиенту</string>
    <string name="pref_sms_to_single_default">Здравствуйте. Это курьер по поводу доставки.
        Можно к Вам сегодня подъехать по адресу </string>
    <string name="pref_sms_to_everyone_summary">для отправки всем клиентам</string>
    <string name="pref_sms_to_everyone_default">Здравствуйте. Это курьер по поводу доставки.
        До которого часа к Вам можно сегодня подъехать? Спасибо.</string>
    <string name="showMap_title">Показать все доставки на карте</string>
    <string name="smsToEveryone_title">Послать SMS всем клиентам</string>
    <string name="addNewDelivery_title">Добавить доставку</string>
    <string name="my_deliveries_title">Мои доставки</string>
    <string name="during">За</string>
    <string name="your_wallet_has">у Вас в кошельке</string>
    <string name="all_your_completed_deliveries_amount">Всего Вы выполнили доставок: </string>
    <string name="all_your_completed_deliveries_sum">На общую сумму: </string>
    <string name="most_haunted_underground_station">Самая частая ст. м.: </string>
    <string name="hint_delivery_address">Адрес доставки</string>
    <string name="hint_client_phone">Номер телефона</string>
    <string name="hint_item_price">Цена товара</string>
    <string name="hint_item_name">Название товара</string>
    <string name="hint_delivery_time_limit">До / после которого часа?</string>
    <string name="hint_client_comment">Комментарий (кв. и прочее)</string>
    <string name="hint_client_name">Имя клиента</string>
    <string name="button_add">Добавить</string>
    <string name="button_add_more">Добавить ещё…</string>
    <string name="button_edits_are_ready">Готово</string>
    <string name="are_you_sure_sms_to_everyone">ВНИМАНИЕ! Не для каждой доставки указан номер телефона.
    Если Вы продолжите, то sms будут отправлены только тем клиентам, для которых указан номер.
    Продолжить?</string>
    <string name="empty_delivery_address">Укажите адрес, на который нужно доставить товар.</string>
    <string name="no_internet">Сначала включите интернет</string>
    <string name="add_first_delivery">Чтобы добавить доставку, нажмите на кнопку в правом нижнем углу</string>
    <string name="on_long_click_delivery_title1">Вы выбрали доставку, которая была добавлена</string>
    <string name="on_long_click_delivery_title2">Её адрес:</string>
    <string name="on_long_click_delivery_title3">Что хотите сделать с ней?</string>
    <string name="delete_button">Удалить</string>
    <string name="edit_button">Изменить</string>
    <string name="wait_delivery_is_being_added">Подождите, пока добавится доставка</string>
    <string name="only_for_moscow_and_mo">ВНИМАНИЕ! Корректная работа приложения гарантирована
        только для доставок по Москве и МО.</string>
    <string name="about_services">Пользуясь <b>CourierHelper Android Application</b>,
        Вы подтврждаете, во-первых, своё согласие с тем, что данные о доставках
        могут собираться для ведения статистики;
        во-вторых, своё согласие c условиями использования нижеперечисленных сервисов,
        задействованных в данном приложении:</string>
    <string name="about_how_to_desc">Прежде всего <b>для Вашего удобства</b>
        мы настоятельно рекомендуем Вам ознакомиться со
        всеми возможностями данного приложения.</string>
    <string name="about_courier_helper_pro_desc"><b>Лень вручную добавлять доставки?</b>
        Понимаем! Именно поэтому мы разработали сервис <a href="https://courierhelper.is88.ru/">CourierHelper.is88.ru</a>,
        где курьерам приходят доставки по воздуху.
        Посмотрите сами и <b>обязательно покажите</b> своему менеджеру.</string>
    <string name="write_to">Связаться с разработчиком: <b>is-smari@yandex.ru</b></string>
    <string name="how_to"><u>Как пользоваться?</u></string>
    <string name="how_to_watch_video"><b><u>Смотреть видео</u></b></string>
    <string name="how_to_0"><i><b>Жирным шрифтом</b> выделены функции приложения
        (в том числе их косвенные названия или их подфункции) или способы обращения к ним.
        Причём одна и та же функция <b>не</b> выделяется более 1 раза.</i></string>
    <string name="how_to_1"><b>\t 1. Добавление доставок </b></string>
    <string name="how_to_1a">\t – Все поля, кроме адреса доставки, не являются обязательными.
        Однако учитывайте, что игнорируя поле «номер телефона», Вы не сможете
        позвонить клиенту или отправить ему SMS в один клик.
        Также имейте в виду, поле «Цена товара» учитывается в разделе статистики.</string>
    <string name="how_to_1b">\t – Пользуйтесь функцией <b>«добавить ещё»</b>,
        если хотите добавить несколько доставок, не возвращаясь на главный экран.</string>
    <string name="how_to_2"><b>\t 2. Одиночное нажатие на доставку</b> открывает диалог,
        из которого Вы можете: <b>позвонить</b> клиенту, <b>отправить</b> ему <b>SMS</b>
        или открыть <b>адрес доставки на карте</b>.</string>
    <string name="how_to_2a">\tВ текст сообщения автоматически вставляется <b>шаблон</b>,
        который Вы можете редактировать в <b>настройках</b>.</string>
    <string name="how_to_3"><b>\t 3. Настройки </b></string>
    <string name="how_to_3a">\t Также в настройках Вы можете редактировать <b>шаблон</b> текста
        для отправки SMS-сообщения сразу всем клиентам.</string>
    <string name="how_to_4">\t <b>4. SMS сразу всем клиентам в один клик</b></string>
    <string name="how_to_5">\t <b>5. Удерживайте карточку с доставкой</b>,
        если хотите <b>изменить</b> или <b>удалить</b> эту доставку.</string>
    <string name="how_to_6">\t <b>6.</b> В правом верхнем углу карточки с доставкой
        вызовите опцию <b>«выполнил»</b> для того, чтобы уведомить приложение о выполнении этой доставки.
        После этого она попадёт в архив.</string>
    <string name="how_to_7">\t <b>7.</b> В <b>«архиве»</b> хранятся все выполненные доставки.</string>
    <string name="how_to_8">\t <b>8.</b> В <b>«кошельке»</b> демонстрируется сумма всех товаров,
        которые Вы уже доставили за последний рабочий день.</string>
    <string name="how_to_8a">\t Таким образом, в конце рабочего дня Вы сможете произвести <b>сверку итогов</b>.</string>
    <string name="how_to_8b">\t Чтобы сверить или узнать итоги за какую-то <b>предыдущую</b> дату, задайте её вручную.</string>
    <string name="how_to_9">\t <b>9. Статистика</b></string>
    <string name="how_to_9a">\t Рассчитывается только для выполненных доставок.</string>
    <string name="how_to_10">\t <b>10. Показать все доставки на одной карте</b></string>
    <string name="how_to_10a">\t – При нажатии на метку открывается диалог внизу карты.
        В этом диалоговом окне отображается вся информация о доставке (при условии, что она задана),
        а также три кнопки: «отсюда», «сюда» и «опции».</string>
    <string name="how_to_10b">\t – Кнопка <b>«опции»</b> приводит к действию
        аналогичному одиночному нажатию на доставку (см. п. 2).</string>
    <string name="how_to_10c">\t – С помощью кнопок <b>«отсюда»</b> и <b>«сюда»</b> можно
        <b>построить один или несколько маршрутов на одной карте</b> (в т.ч. из одной или в одну точку).
        <i>По независящим от нас причинам уже при нескольких одновременно прорисованных маршрутах
        карта начинает работать значительно медленнее.</i></string>
    <string name="how_to_10d">\t – Кнопка <b>«Очистить маршрут»</b> стирает с карты последний отрисованный маршрут.</string>
    <string name="how_to_10e">\t – Также есть возможность построить маршрут с помощью кнопки <b>«Маршруты»</b>
        в левом верхнем углу карты. В поля <b>«откуда»</b> и <b>«куда»</b> можно добавить координаты,
        просто кликнув по карте. Туда же можно вставить и координаты <b>Вашего текущего местоположения</b>.
        Примечательно, что конечные точки построенного здесь маршрута можно <b>перетаскивать</b>,
        что приводит к динамической перерисовке текущего маршрута.</string>
    <string name="how_to_10f">\t – Кнопка <b>«Моё местоположение»</b> в левом верхнем углу
        служит для определения Вашего местоположения.</string>
    <string name="how_to_10g">\t – При активированной функции <b>«Пробки»</b> в правом верхнем углу,
        будет показана степень загруженности дорог.</string>
    <string name="how_to_10h">\t – При активированном инструменте <b>«Линейка»</b> в правом нижнем углу,
        между двумя касаниями на карте будет <b>рассчитано расстояние</b>, изображённое возле последней точки.
        Любую из точек, между которыми уже рассчитано расстояние, можно <b>перетаскивать</b>,
        что приводит к динамическому перерасчёту расстояния.</string>
    <string name="rate_us"><u>Оценить приложение в Play Market</u></string>
    <string name="ask_to_rate">Нам очень приятно, что Вы уже некоторое время пользуетесь нашим приложением.
    Найдёте пару минут, чтобы оценить его в Play Market?
    Мы были бы очень Вам признательны :)</string>
    <string name="location_access_required">Необходимо разрешение для определения локации</string>
    <string name="permission_access_required_title">Необходимо разрешение</string>
    <string name="why_need_location">Приложению нужен доступ к геолокации, чтобы при вводе адреса отображать
    подсказки, на основании города в котором Вы работаете.</string>
    <string name="functionality_limitation_title">Ограничение функционала</string>
    <string name="unable_to_show_predictions">К сожалению, мы не знаем в каком городе Вы находитесь, поэтому
    подсказки при вводе адреса могу быть показаны для чужого города, или не показаны вообще.
        Может всё-таки разрешите приложению определять город, в котором Вы работаете?</string>
    <string name="never_mind">Пофиг</string>
    <string name="gps_disabled_title">GPS очключена</string>
    <string name="gps_disabled_msg">Пожалуйста, включите GPS, иначе мы не сможем Вам показать
    правильные подсказки при вводе адреса. Включить?</string>
    <string name="sort_by_toolbar_title">Сначала ⬇</string>
    <string name="sort_by_date_desc">новые</string>
    <string name="sort_by_date_asc">старые</string>
    <string name="sort_by_price_desc">дорогие</string>
    <string name="sort_by_price_asc">дешёвые</string>
</resources>