<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_sms_category"
        android:key="pref_key_sms_category">

        <EditTextPreference
            android:key="pref_sms_to_single"
            android:title="@string/pref_sms_to_single_everyone_title"
            android:summary="@string/pref_sms_to_single_summary"
            android:defaultValue="@string/pref_sms_to_single_default"
            />

        <EditTextPreference
            android:key="pref_sms_to_everyone"
            android:title="@string/pref_sms_to_single_everyone_title"
            android:summary="@string/pref_sms_to_everyone_summary"
            android:defaultValue="@string/pref_sms_to_everyone_default"
            />

    </PreferenceCategory>

</PreferenceScreen>