<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:orderInCategory="100"
        android:title="@string/sort_by_toolbar_title"
        android:icon="@drawable/ic_action_tune"
        app:showAsAction="always" >

        <menu>
            <item android:id="@+id/sort_by_date_desc"
                android:title="@string/sort_by_date_desc" />
            <item android:id="@+id/sort_by_date_asc"
                android:title="@string/sort_by_date_asc" />
            <item android:id="@+id/sort_by_price_desc"
                android:title="@string/sort_by_price_desc" />
            <item android:id="@+id/sort_by_price_asc"
                android:title="@string/sort_by_price_asc" />
        </menu>
    </item>

</menu>