<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/wallet_nav_item"
            android:title="@string/wallet_nav_item_title"
            android:icon="@mipmap/ic_account_balance_wallet_black_24dp"/>

        <item android:id="@+id/archive_nav_item"
            android:title="@string/archive_nav_item_title"
            android:icon="@mipmap/ic_archive_black_24dp"/>

        <item android:id="@+id/stats_nav_item"
            android:title="@string/stat_nav_item_title"
            android:icon="@mipmap/ic_insert_chart_black_24dp"/>

        <item android:id="@+id/settings_nav_item"
            android:title="@string/settings_nav_item_title"
            android:icon="@mipmap/ic_settings_black_24dp"/>

        <item android:id="@+id/about_nav_item"
            android:title="@string/about_nav_item_title"
            android:icon="@mipmap/ic_info_black_24dp"/>

    </group>

</menu>
