<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/askToRateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameTextView"
        android:text="@string/ask_to_rate"
        android:paddingTop="6dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/askToRateTextView">

        <Button
            android:id="@+id/neverWantToRateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/never"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/rateLaterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/later"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/rateNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/rate"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>
</RelativeLayout>